# Codex

./: .gits.toml  CONTRIBUTING.md  CUSTOM_MODIFICATIONS.md  Cargo.toml  README.md  README_EN.md  cdp_debug.py  package-lock.json  package.json  pnpm-lock.yaml
.workbuddy/memory/: 2025-06-13.md  2025-06-26.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-14.md  2026-06-16.md  2026-06-18.md  MEMORY.md
apps/devtools/: index.html  package-lock.json  package.json  vite-plugin-git-api.ts  vite.config.ts
apps/devtools/src/: App.tsx  index.css
apps/ucodex-launcher/: Cargo.toml  build.rs
apps/ucodex-launcher/src/: main.rs
apps/ucodex-manager/: index.html  package-lock.json  package.json
apps/ucodex-manager/src/: App.tsx  FloatingMode.tsx  StatusOverlay.tsx  main.tsx  styles.css
apps/ucodex-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/ucodex-manager/src-tauri/capabilities/: default.json
apps/ucodex-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/ucodex-manager/src-tauri/tests/: windows_subsystem.rs
assets/inject/: renderer-inject.js
crates/ucodex-core/: Cargo.toml
crates/ucodex-core/src/: assets.rs  cli_wrapper.rs  config_manager.rs  config_migration.rs  http_client.rs  launcher.rs  lib.rs  model_catalog.rs  paths.rs  ports.rs  proxy_cache.rs  proxy_stats.rs  relay_config.rs  routes.rs  settings.rs  stats_persistence.rs  status.rs  update.rs  version.rs  watcher.rs
crates/ucodex-core/src/install/: macos.rs  (+2 more)
crates/ucodex-core/tests/: bridge_routes.rs  cdp_bridge.rs  cli_wrapper.rs  installers.rs  launcher.rs  model_catalog.rs  protocol_proxy.rs  relay_config.rs  updater.rs  upstream_worktree.rs  watcher.rs
crates/ucodex-data/: Cargo.toml
crates/ucodex-data/src/: markdown.rs  provider_sync.rs  storage.rs
crates/ucodex-data/tests/: markdown.rs  provider_sync.rs  storage_adapter.rs
scripts/: build-release.sh  cdp-eval-inject.py  my-changes.sh
scripts/installer/macos/: package-dmg.sh
scripts/installer/windows/: CodexPlusPlus.nsi
(+2 files in other folders)
