[package]
name = "ucodex-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ucodex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
ucodex-core = { path = "../../crates/ucodex-core" }
ucodex-data = { path = "../../crates/ucodex-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
