[package]
name = "ucodex-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ucodex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ucodex-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
ucodex-core = { path = "../../../crates/ucodex-core" }
ucodex-data = { path = "../../../crates/ucodex-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol", "tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tokio.workspace = true
reqwest.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
